[workspace]
members = ["datafusion_util", "influxdb_influxql_parser", "iox_query_influxql", "observability_deps", "schema", "test_helpers"]

[workspace.package]
version = "0.1.0"
authors = ["IOx Project Developers"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
arrow = { git = "https://github.com/ShiKaiWi/arrow-rs.git", rev = "d4e905a6cc337f10c61f47d75f264df82fc97242" }
datafusion = { git = "https://github.com/ShiKaiWi/arrow-datafusion.git", rev = "f4440be8f9c4a50f5e2e8224e18c498c12da37ee", default-features = false }
hashbrown = { version = "0.13.2" }
